iptables
# Generated by iptables-save v1.8.8 (nf_tables) on Wed Dec  6 15:02:18 2023
*mangle
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
COMMIT
# Completed on Wed Dec  6 15:02:18 2023
# Generated by iptables-save v1.8.8 (nf_tables) on Wed Dec  6 15:02:18 2023
*raw
:PREROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
COMMIT
# Completed on Wed Dec  6 15:02:18 2023
# Generated by iptables-save v1.8.8 (nf_tables) on Wed Dec  6 15:02:18 2023
*filter
:INPUT DROP [937:286866]
:FORWARD ACCEPT [0:0]
:OUTPUT DROP [699:45991]
-A INPUT -i lo -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 53 -j ACCEPT
-A OUTPUT -p udp -m udp --dport 53 -j ACCEPT
-A OUTPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -p icmp -j ACCEPT
-A OUTPUT -d 192.168.1.1/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A OUTPUT -d 192.168.1.81/32 -p tcp -m tcp --dport 22 -j ACCEPT
COMMIT
# Completed on Wed Dec  6 15:02:18 2023
# Generated by iptables-save v1.8.8 (nf_tables) on Wed Dec  6 15:02:18 2023
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
COMMIT
# Completed on Wed Dec  6 15:02:18 2023
